roles/k8s-master/files/manifests/user/media/deluge.yml
---
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: deluge
  namespace: media
  labels:
    app: deluge
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: deluge
  template:
    metadata:
      labels:
        app: deluge
    spec:
      containers:
        - name: app
          image: linuxserver/deluge:4ad4347d-ls7
          ports:
            - containerPort: 8112
            - containerPort: 45401
              hostPort: 45401
            - containerPort: 45402
              hostPort: 45402
            - containerPort: 45403
              hostPort: 45403
            - containerPort: 45404
              hostPort: 45404
            - containerPort: 45405
              hostPort: 45405
            - containerPort: 45401
              hostPort: 45401
              protocol: UDP
            - containerPort: 45402
              hostPort: 45402
              protocol: UDP
            - containerPort: 45403
              hostPort: 45403
              protocol: UDP
            - containerPort: 45404
              hostPort: 45404
              protocol: UDP
            - containerPort: 45405
              hostPort: 45405
              protocol: UDP
          volumeMounts:
            - name: deluge-config
              mountPath: /config
            - name: deluge-media
              mountPath: /media
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
          livenessProbe:
            httpGet:
              path: /
              port: 8112
            initialDelaySeconds: 30
            periodSeconds: 30
      volumes:
        - name: deluge-config
          persistentVolumeClaim:
            claimName: deluge-config-pvc
        - name: deluge-media
          flexVolume:
            driver: ceph.rook.io/rook
            fsType: ceph
            options:
              fsName: media-fs
              clusterNamespace: rook-ceph
        - name: localtime
          hostPath:
            path: /etc/localtime
      securityContext:
        fsGroup: 797
---
kind: Service
apiVersion: v1
metadata:
  name: deluge-svc
  namespace: media
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8112
  selector:
    app: deluge
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: deluge-ingress
  namespace: media
spec:
  rules:
    - host: deluge.underyx.me
      http:
        paths:
          - backend:
              serviceName: deluge-svc
              servicePort: 80
            path: /
  tls:
    - hosts:
        - deluge.underyx.me
      secretName: deluge-tls
