roles/k8s-master/files/manifests/user/media/jackett.yml
---
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: jackett
  namespace: media
  labels:
    app: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
      - name: app
        image: linuxserver/jackett:294
        ports:
        - containerPort: 9117
        volumeMounts:
        - name: jackett-config
          mountPath: /config
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
        livenessProbe:
          httpGet:
            path: /
            port: 9117
          initialDelaySeconds: 30
          periodSeconds: 30
      volumes:
      - name: jackett-config
        persistentVolumeClaim:
          claimName: jackett-config-pvc
      - name: localtime
        hostPath:
          path: /etc/localtime
      securityContext:
        fsGroup: 797
---
kind: Service
apiVersion: v1
metadata:
  name: jackett-svc
  namespace: media
spec:
  ports:
    - port: 80
      targetPort: 9117
  selector:
    app: jackett
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jackett-ingress
  namespace: media
spec:
  rules:
  - host: jackett.underyx.me
    http:
      paths:
      - backend:
          serviceName: jackett-svc
          servicePort: 80
        path: /
  tls:
  - hosts:
    - jackett.underyx.me
    secretName: jackett-tls
