roles/k8s-master/files/manifests/user/media/plex-tools.yml
---
kind: Service
apiVersion: v1
metadata:
  name: plex-tools-svc
  namespace: media
spec:
  ports:
    - port: 80
      targetPort: 33400
  selector:
    app: plex
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: plex-tools-ingress
  namespace: media
spec:
  rules:
  - host: plex-tools.underyx.me
    http:
      paths:
      - backend:
          serviceName: plex-tools-svc
          servicePort: 80
        path: /
  tls:
  - hosts:
    - plex-tools.underyx.me
    secretName: plex-tools-tls
