roles/k8s-master/files/manifests/user/media/radarr.yml
---
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: app
          image: linuxserver/radarr:v0.2.0.1293-ls1
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: radarr-media
              mountPath: /media
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
            - name: rtc
              mountPath: /dev/rtc
              readOnly: true
          livenessProbe:
            httpGet:
              path: /
              port: 7878
            initialDelaySeconds: 30
            periodSeconds: 30
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config-pvc
        - name: radarr-media
          flexVolume:
            driver: ceph.rook.io/rook
            fsType: ceph
            options:
              fsName: media-fs
              clusterNamespace: rook-ceph
        - name: localtime
          hostPath:
            path: /etc/localtime
        - name: rtc
          hostPath:
            path: /dev/rtc
      securityContext:
        fsGroup: 797
---
kind: Service
apiVersion: v1
metadata:
  name: radarr-svc
  namespace: media
spec:
  ports:
    - port: 80
      targetPort: 7878
  selector:
    app: radarr
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: media
spec:
  rules:
    - host: radarr.underyx.me
      http:
        paths:
          - backend:
              serviceName: radarr-svc
              servicePort: 80
            path: /
  tls:
    - hosts:
        - radarr.underyx.me
      secretName: radarr-tls
